# labor-node

./: Cargo.toml  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
node/: Cargo.toml
node/cli/: Cargo.toml  build.rs
node/cli/browser-demo/: build.sh  index.html
node/cli/res/: testnet-raw.json  testnet.json
node/cli/src/: chain_spec.rs  command.rs  service.rs
node/executor/: Cargo.toml
node/executor/benches/: bench.rs
node/executor/src/: lib.rs
node/executor/tests/: basic.rs  common.rs  fees.rs  submit_transaction.rs
node/runtime/: Cargo.toml
node/runtime/src/: lib.rs
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/labor/: Cargo.toml
pallets/labor/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: prepare-test-net.sh
