[package]
name = 'pallet-labor'
version = '0.0.1-dev'
description = 'FRAME pallet for defining labor runtime logic.'
authors = ['Martijn Benjamin <https://github.com/benjamin-martijn>']
homepage = 'https://github.com/benjamin-martijn'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/benjamin-martijn/labor-node/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, package = "frame-benchmarking", optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", package = "frame-support", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", package = "frame-system", default-features = false }

sp-core = { git = "https://github.com/paritytech/substrate", package = "sp-core", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime", default-features = false }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
