[package]
name = 'pallet-labor'
version = '0.0.2-dev'
description = 'FRAME pallet for defining labor runtime logic.'
authors = ['Martijn Benjamin <https://github.com/benjamin-martijn>']
homepage = 'https://github.com/benjamin-martijn'
edition = '2018'
license = 'Unlicense'
publish = false
repository = 'https://github.com/benjamin-martijn/labor-node/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '3.1.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05' }
frame-support = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05' }
frame-system = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05' }

[dev-dependencies]
serde = '1.0.119'
sp-core = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05' }
sp-io = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05' }
sp-runtime = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05' }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
